// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordStrengthMeter > should match snapshot for different strength levels 1`] = `
<div
  class="space-y-2"
>
  <div
    class="flex h-2 w-full gap-1"
  >
    <div
      class="h-full w-full rounded-full transition-colors bg-muted"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-muted"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-muted"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-muted"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-muted"
    />
  </div>
  <p
    class="text-xs text-muted-foreground"
  >
    No Password
  </p>
</div>
`;

exports[`PasswordStrengthMeter > should match snapshot for different strength levels 2`] = `
<div
  class="space-y-2"
>
  <div
    class="flex h-2 w-full gap-1"
  >
    <div
      class="h-full w-full rounded-full transition-colors bg-destructive"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-muted"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-muted"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-muted"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-muted"
    />
  </div>
  <p
    class="text-xs text-muted-foreground"
  >
    Very Weak
  </p>
</div>
`;

exports[`PasswordStrengthMeter > should match snapshot for different strength levels 3`] = `
<div
  class="space-y-2"
>
  <div
    class="flex h-2 w-full gap-1"
  >
    <div
      class="h-full w-full rounded-full transition-colors bg-orange-500"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-orange-500"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-muted"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-muted"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-muted"
    />
  </div>
  <p
    class="text-xs text-muted-foreground"
  >
    Weak
  </p>
</div>
`;

exports[`PasswordStrengthMeter > should match snapshot for different strength levels 4`] = `
<div
  class="space-y-2"
>
  <div
    class="flex h-2 w-full gap-1"
  >
    <div
      class="h-full w-full rounded-full transition-colors bg-green-500"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-green-500"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-green-500"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-green-500"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-muted"
    />
  </div>
  <p
    class="text-xs text-muted-foreground"
  >
    Good
  </p>
</div>
`;

exports[`PasswordStrengthMeter > should match snapshot for different strength levels 5`] = `
<div
  class="space-y-2"
>
  <div
    class="flex h-2 w-full gap-1"
  >
    <div
      class="h-full w-full rounded-full transition-colors bg-green-600"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-green-600"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-green-600"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-green-600"
    />
    <div
      class="h-full w-full rounded-full transition-colors bg-green-600"
    />
  </div>
  <p
    class="text-xs text-muted-foreground"
  >
    Strong
  </p>
</div>
`;
